# IT-Labs

./: README.md
basis_of_data_transmission/: lab01.c  make_plot.sh  run.sh
basis_of_data_transmission/lab01/: 01  lab01.c  run.sh
basis_of_data_transmission/lab02/: 02.c  lab02.c  make_plot.sh  run.sh
basis_of_data_transmission/lab03/: lab03.c  make_plot.sh  run.sh
basis_of_data_transmission/lab04/: lab04  lab04.c  run.sh
concurrent_programming/: run.sh
concurrent_programming/lab01/: lab01  lab01.cpp  makefile
concurrent_programming/lab02/: lab02.cpp  makefile  new1.ppm  run.sh
concurrent_programming/lab03/: lab03  lab03.cpp  makefile  run.sh  santa.ppm  santa_masked.ppm
concurrent_programming/lab04/: lab04.cpp  makefile  run.sh
cuda/lab01/: ex1.cu  ex2.cu  run.sh
cuda/lab02/: ex2.cu
cuda/lab03/: ex1.cu  ex2.cu  run.sh
cuda/lab04/: ex1.c  ex1.h  ex1_kernel.cu  ex2.c  ex2.h  ex2_kernel.cu  makefile  run.sh
data_structures/lab1/: lab01.c
numeric_methods/: approximation.m  derivative.m  integral.m  interpolation.m  nonlinear_equation.m
optimalization_methods/: golden_ratio_method.m  halvening_method.m  newton_mathod.m
project/: makefile  run.sh  ssim.m
sw_eng/: Administrator.cpp  Administrator.h  Artifact.cpp  Artifact.h  CMakeLists.txt  Database.cpp  Database.h  Label.h  Notification.h  Observer.h  Permission.h  Project.cpp  Project.h  User.cpp  User.h  Utils.cpp  Utils.h  main.cpp  makefile  run.sh
sw_eng/include/: Artifact.h  Database.h  Label.h  Observer.h  Project.h  Utils.h
sw_eng/src/: Database.cpp  User.cpp  Utils.cpp  main.cpp
(+89 files in other folders)
